# 3rd-party-ressources

./: CMakeLists.txt  README.md  package.xml
3rd_party_ressources/: CMakeLists.txt  package.xml
fovis/fovis_ros/launch/: fovis_hydro_openni_mod.launch  fovis_hydro_openni_mod.launch~
fovis/fovis_ros/src/: mono_depth_odometer.cpp  odometer_base.hpp
humanoid_navigation/humanoid_localization/: CMakeLists.txt  package.xml
humanoid_navigation/humanoid_localization/config/: kinect_localization.yaml  kinect_localization.yaml~
humanoid_navigation/humanoid_localization/include/humanoid_localization/: HumanoidLocalization.h  MapModel.h  humanoid_localization_defs.h
humanoid_navigation/humanoid_localization/launch/: kinect_localization.launch  kinect_localization.launch~
humanoid_navigation/humanoid_localization/src/: EndpointModel.cpp  HumanoidLocalization.cpp  MapModel.cpp  MotionModel.cpp  ObservationModel.cpp  RaycastingModel.cpp
libfovis/: CMakeLists.txt  package.xml
libfovis/libfovis/: absolute_orientation_horn.hpp  camera_intrinsics.hpp  depth_source.hpp  feature_match.hpp  frame.hpp  initial_homography_estimation.cpp  initial_homography_estimation.hpp  internal_utils.hpp  keypoint.hpp  motion_estimation.hpp  pyramid_level.hpp  rectification.hpp  refine_motion_estimate.hpp  stereo_frame.hpp  stereo_rectify.hpp  visual_odometry.hpp
navigation/robot_pose_ekf/src/: odom_estimation.cpp
octomap_mapping/octomap_server/launch/: octomap_mapping_mod.launch
robot_localization/launch/: ekf_template.launch~
